fix(768px): make prev/next buttons horizontally aligned

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -418,10 +418,12 @@ code {
   }
 
   .post-nav-container {
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: between;
     align-items: center;
-    gap: 15px;
+    gap: 0;
     height: auto;
+    width: 100%;
   }
 
   .post-nav-left,
